--- a/devenv.yaml
+++ b/devenv.yaml
@@ -14,3 +14,5 @@ inputs:
     url: github:NixOS/nixpkgs/nixos-24.11
   devenv-zsh:
     url: github:mcdonc/devenv-zsh
+  devenv-awsenv:
+    url: github:mcdonc/devenv-awsenv
